Add in-memory implementation of AssignJobToFiles